--- a/frontend/agenda.html
+++ b/frontend/agenda.html
@@ -64,20 +64,19 @@
           <select id="appointment-patient_id" name="patient_id" required></select>
         </div>
 
-        <div class="form-group">
-          <label>Título *</label>
-          <input type="text" id="appointment-title" name="title" required>
-        </div>
+        <!-- Title Removed - Auto-generated Backend -->
 
         <div class="form-row">
           <div class="form-group">
             <label>Data *</label>
             <input type="date" id="appointment-date" name="appointment_date" required>
-            <div style="margin-top: 5px; display: flex; align-items: center; gap: 5px;">
-              <input type="checkbox" id="appointment-recurring" name="is_recurring">
-              <label for="appointment-recurring" style="font-size: 0.9em; margin: 0; cursor: pointer;">Repetir por 4
-                Semanas</label>
-            </div>
+          </div>
+          <div class="form-group">
+            <label>Recorrência</label>
+            <select id="appointment-recurrence" name="recurrence">
+              <option value="none">Agendamento Único</option>
+              <option value="continuous">Agendamento Contínuo (12 semanas)</option>
+            </select>
           </div>
           <div class="form-group">
             <label>Horário Início *</label>
@@ -92,19 +91,27 @@
         <div class="form-row">
           <div class="form-group">
             <label>Tipo de Serviço</label>
-            <select id="appointment-service_type" name="service_type">
+            <select id="appointment-service_type" name="service_type" onchange="updateServicePrice()">
               <option value="Pilates">Pilates</option>
+              <option value="Yoga">Yoga</option>
+              <option value="Treino Funcional">Treino Funcional</option>
+              <option value="Fisioterapia">Fisioterapia</option>
               <option value="Liberação Miofascial">Liberação Miofascial</option>
               <option value="Condicionamento Físico">Condicionamento Físico</option>
-              <option value="Yoga">Yoga</option>
-              <option value="Fisioterapia">Fisioterapia</option>
               <option value="Avaliação">Avaliação</option>
             </select>
+          </div>
+          <div class="form-group">
+            <label>Valor do Serviço (R$)</label>
+            <input type="number" step="0.01" id="appointment-price" name="price" placeholder="0,00">
           </div>
           <div class="form-group">
             <label>Profissional</label>
             <input type="text" id="appointment-professional" name="professional">
           </div>
+        </div>
+
+        <div class="form-row">
           <div class="form-group">
             <label>Status</label>
             <select id="appointment-status" name="status">
@@ -112,7 +119,7 @@
               <option value="confirmado">Confirmado</option>
               <option value="realizado">Realizado</option>
               <option value="cancelado">Cancelado</option>
-              <option value="falta">Falta</option>
+              <option value="faltou">Faltou</option>
             </select>
           </div>
           <div class="form-group">
@@ -128,10 +135,7 @@
           </div>
         </div>
 
-        <div class="form-group">
-          <label>Descrição</label>
-          <textarea id="appointment-description" name="description" rows="3"></textarea>
-        </div>
+        <!-- Description Removed -->
 
         <div class="form-group">
           <label>Observações</label>
@@ -173,6 +177,8 @@
         </div>
         <div class="form-actions">
           <button type="submit" class="btn-primary">Confirmar e Pontuar 🏆</button>
+          <button type="button" class="btn-warning" onclick="confirmAbsence()"
+            style="background-color: #ff9800; color: white;">Aluno Faltou</button>
           <button type="button" class="btn-secondary" onclick="closeConfirmModal()">Cancelar</button>
         </div>
       </form>
