--- a/frontend/pacientes.html
+++ b/frontend/pacientes.html
@@ -78,14 +78,9 @@
         </div>
 
         <div class="form-row">
-          <div class="form-group">
-            <label>Tipo de Pessoa *</label>
-            <select id="patient-type" name="type" required>
-              <option value="Cliente">Cliente</option>
-              <option value="Aluno">Aluno</option>
-              <option value="Paciente">Paciente</option>
-            </select>
-          </div>
+          <!-- Type Field Hidden/Disabled as requested -->
+          <input type="hidden" name="type" value="Cliente">
+
           <div class="form-group" style="flex: 2;">
             <label>Nome Completo *</label>
             <input type="text" id="patient-name" name="name" required>
@@ -119,8 +114,8 @@
 
         <div class="form-row">
           <div class="form-group">
-            <label>Telefone</label>
-            <input type="tel" id="patient-phone" name="phone" placeholder="(00) 00000-0000">
+            <label>Telefone *</label>
+            <input type="tel" id="patient-phone" name="phone" placeholder="(00) 00000-0000" required>
           </div>
           <div class="form-group">
             <label>E-mail</label>
