--- a/frontend/pacientes.html
+++ b/frontend/pacientes.html
@@ -34,6 +34,8 @@
     <div class="page-header">
       <h1>Clientes & Alunos</h1>
       <button class="btn-primary" onclick="openNewPatient()">+ Novo Cadastro</button>
+      <button class="btn-secondary" onclick="generateInviteLink()" style="margin-left:10px;">🔗 Gerar Link
+        (24h)</button>
     </div>
 
     <section class="card search-section">
