Feat: WhatsApp Integration for Appointment Reminders

--- a/frontend/agenda.html
+++ b/frontend/agenda.html
@@ -143,6 +143,8 @@
         </div>
 
         <div class="form-actions">
+          <button type="button" class="btn-success" onclick="sendWhatsAppReminder()"
+            style="background:#25D366; color:white; margin-right:auto;">📱 Enviar no Zap</button>
           <button type="submit" class="btn-primary">Salvar</button>
           <button type="button" class="btn-secondary" onclick="closeAppointmentModal()">Cancelar</button>
         </div>
